# clade-parallel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md  clade-manifest.json  group-config.json  settings.json  settings.local.json.example
.claude/agents/: architect.md  code-reviewer.md  developer.md  doc-writer.md  interviewer.md  mcp-setup.md  planner.md  project-setup.md  security-reviewer.md  tester.md  workflow-builder.md
.claude/commands/: agent-architect.md  agent-code-reviewer.md  agent-developer.md  agent-doc-writer.md  agent-interviewer.md  agent-mcp-setup.md  agent-planner.md  agent-project-setup.md  agent-security-reviewer.md  agent-tester.md  agent-workflow-builder.md  clear-file-history.md  cluster-promote.md  context-gauge.md  enable-sandbox.md  end-session.md  init-session.md  playwright-add-origin.md  playwright-list-origins.md  playwright-remove-origin.md  promote.md  prune-reports.md  prune-rules.md  status.md  update.md
.claude/hooks/: apply-diff.js  clade-update.js  clear-file-history.js  clear-tmp-file.js  cluster-promote-core.js  enable-sandbox.js  hook-utils.js  manage-playwright-origins.js  post-tool.js  pre-compact.js  pre-tool.js  stop.js  (+5 more)
examples/: manifest-hello.md  manifest-parallel-dev.md  manifest.md
schema/: manifest.schema.json
tests/: conftest.py  test_cli.py  test_integration.py  test_manifest.py  test_report.py  test_resume_deps.py  test_retry_backoff.py  test_run_state.py  test_runner.py  test_runner_t7.py  test_runner_v04_fix.py  test_runner_v04_m1.py  test_runner_v04_m2.py
(+64 files in other folders)
